--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 rocket = "0.3.5"
 rocket_codegen = "0.3.5"
 rocket_contrib = "0.3.5"
+ring = { version = "0.17.5-alpha.1" }
 diesel = { version = "0.16.0", features = ["sqlite"] }
 diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
 dotenv = "0.10.1"
